manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo
  namespace: cicd-test
spec:
  type: NodePort
  selector:
    app: cicd-demo
  ports:
  - name: cicd-demo-port
    port: 7070
    targetPort: 8080
